# ANetHack

./: .gitmodules  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/com/yywspace/anethack/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nh_default_objects.json  sysconf
app/src/main/assets/conf/: nethackrc  sysconf
app/src/main/assets/keyboard/: a.json  keyboard_ctrl.json  keyboard_custom.json  keyboard_letter.json  keyboard_letter_upper.json  keyboard_meta.json  keyboard_symbol.json  keyboard_upper_letter.json  keyboard_view_template.json
app/src/main/assets/nethackdir/: bogusmon  data  engrave  epitaph  nhdat  options  recover  rumors  sysconf  sysconf1
app/src/main/cpp/: CMakeLists.txt  Lua_CMakeLists.txt  androidentry.c  androidentry.h  androidmain.c  androidrecover.c  androidrecover.h  androidsound.c  androidunix.c  androidwin.c  tile.c  winandroid.c
app/src/main/cpp/Lua/: CMakeLists.txt  nhlua.h
app/src/main/java/com/yywspace/anethack/: AssetsLoader.kt  CMDMenuAdapter.kt  NHInfoSurfaceView.kt  NHMapSurfaceView.kt  NHMapTouchListener.kt  NHMapView.kt  NHMessageSurfaceView.kt  NHPosKeyAdapter.kt  NHStatusSurfaceView.kt  NHTileSet.kt  NetHack.kt  NetHackActivity.kt  SharedPreferencesUtils.kt  Utils.kt
app/src/main/java/com/yywspace/anethack/command/: NHAnswerCommand.kt  NHBlockingCommandController.kt  NHCommand.kt  NHCommandController.kt  NHCommandParser.kt  NHExtendCommand.kt  NHKeyCommand.kt  NHLineCommand.kt  NHMenuCommand.kt  NHPlayerChooseCommand.kt  NHPosCommand.kt
app/src/main/java/com/yywspace/anethack/entity/: NHAttr.kt  NHColor.kt  NHExtCmd.kt  NHMenuItem.kt  NHMessage.kt  NHPlayer.kt  NHStatus.kt  NHString.kt
app/src/main/java/com/yywspace/anethack/extensions/: AlertDialogExtensions.kt  Extensions.kt
app/src/main/java/com/yywspace/anethack/identify/: NHPriceID.kt  NHPriceIDialog.kt  NHPriceObjListAdapter.kt
app/src/main/java/com/yywspace/anethack/keybord/: BottomCommandSheet.kt  KeyboardGridLayout.kt  KeyboardView.kt  NHKeyboard.kt  NHKeyboardUtils.kt  NHKeyboardView.kt
app/src/main/java/com/yywspace/anethack/map/: NHMapPlayerIndicator.kt  NHMapSurfaceView.kt  NHMapTouchListener.kt  NHMessageSurfaceView.kt  NHPosKeyAdapter.kt  NHStatusSurfaceView.kt
app/src/main/java/com/yywspace/anethack/map/indicator/: IndicatorUtils.kt  NHMapIndicator.kt  NHMapIndicatorController.kt  NHMapPlayerIndicator.kt
app/src/main/java/com/yywspace/anethack/map/operation/: NHMapOperation.kt  NHMapScale.kt  NHMapTransform.kt
app/src/main/java/com/yywspace/anethack/setting/: OptionEditActivity.kt  SettingsActivity.kt
app/src/main/java/com/yywspace/anethack/sound/: NHSound.kt
app/src/main/java/com/yywspace/anethack/window/: NHExtCmdChoose.kt  NHExtendChoose.kt  NHPlayerChoose.kt  NHQuestion.kt  NHWMap.kt  NHWMenu.kt  NHWMenuAdapter.kt  NHWMenuItem.kt  NHWMessage.kt  NHWStatus.kt  NHWText.kt  NHWindow.kt  NHWindowType.kt
app/src/main/res/drawable/: bg_round.xml  btn_bg_selector.xml  btn_text_selector.xml  dot_selected.xml  dot_unselected.xml  ic_nh_launcher_foreground.xml  icon_detail.xml  icon_save.xml  keyboard_key_preview_background.xml
app/src/main/res/layout/: activity_nethack.xml  activity_option_edit.xml  activity_settings.xml  activity_test.xml  dialog_amount_selecter.xml  dialog_extend_command.xml  dialog_extend_command_item.xml  dialog_menu.xml  dialog_menu_item.xml  dialog_menu_item_header.xml  dialog_menu_item_text.xml  dialog_message.xml  dialog_message_item.xml  dialog_number_input.xml  dialog_player_choose.xml  dialog_player_choose_input.xml  dialog_player_choose_item.xml  dialog_player_choose_item_add.xml  dialog_price_identify.xml  dialog_price_obj_item.xml  dialog_question.xml  dialog_question_answer_item.xml  dialog_question_input.xml  dialog_text.xml  keyboard_key_preview.xml  keyboard_key_view.xml  panel_cmd_item.xml  popup_window_pos_key.xml  popup_window_pos_key_item.xml  popup_window_view.xml
app/src/main/res/menu/: option_edit_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_nethack_launcher_round.xml  ic_nh_launcher_round.xml
app/src/main/res/values/: arrays.xml  colors.xml  ic_nethack_launcher_background.xml  ic_nh_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_public_paths.xml  keyboard_ctrl.xml  keyboard_letter.xml  keyboard_meta.xml  keyboard_symbols.xml  root_preferences.xml
app/src/test/java/com/yywspace/anethack/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
